--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "contacttracing",
   "version": "1.0.0",
+  "engines": {
+    "node": "12.11.1"
+    },
   "description": "covid-19 contact tracing in rwanda",
   "main": "app.js",
   "dependencies": {
