--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "version": "1.0.0",
   "engines": {
     "node": "12.11.1"
-    },
+  },
   "description": "covid-19 contact tracing in rwanda",
   "main": "app.js",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.2.0",
     "express-ws": "^4.0.0",
-    "google-distance-matrix": "^1.1.1",
+    "google-distance-matrix": "^0.0.2",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.0",
     "mysql2": "^2.0.0",
